Replaced a tag with wouter Link Fixed CartItem counter span not visible in dark mode

--- a/src/components/cart-item/CartItem.css
+++ b/src/components/cart-item/CartItem.css
@@ -89,11 +89,16 @@
   font-family: "Courier New", Courier, monospace;
   padding: 0.5em 1em;
   border-radius: 20px;
-  font-weight: 600;
+  font-weight: bold;
   color: var(--accent);
-  background-color: var(--static-1);
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
+@media (prefers-color-scheme: dark) {
+  .cart-item .counter span {
+    background-color: rgba(255, 255, 255, 0.6);
+  }
+}
 .delete-btn {
   display: grid;
   place-items: center;
